-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.3.2
-
None
-
Windows Server 2012 R2
jom 1.0.14 does not handle $? correctly
Makefile
out.txt: Makefile @echo "$?" @echo "$**" @echo "$@"
Case 1: out.txt newer than Makefile
jom and nmake do not touch the build rules. Cool.
Case 2: out.txt older than Makefile
Same behavior, cool.
nmake (msvc2013) output:
"Makefile" "Makefile" "out.txt"
jom 1.0.14 output:
"Makefile" "Makefile" "out.txt"
Case 3: out.txt does not exist
Here is where the touble begins
nmake (msvc2013) output:
"Makefile" "Makefile" "out.txt"
jom 1.0.14 output:
"" "Makefile" "out.txt"
Both commands run from the Developer Command Line Prompt for VS2013
For Gerrit Dashboard: QTCREATORBUG-14125 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
108629,3 | fix $? filename macro for nonexistent targets | master | qt-labs/jom | Status: MERGED | +2 | 0 |