fix $? filename macro for nonexistent targets

Task-number: QTCREATORBUG-14125
Change-Id: I0bf713111816a26e6be12de26d46652da8ab7e8b
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>